crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_multiple_args.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: "Code:\n\n\\x y -> x"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Lambda {
        parameters: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "x",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: Var(
                    "y",
                ),
            },
        ],
        body: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 9,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Var {
                kind: LowVar,
                name: "x",
            },
        },
    },
}
