crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_mut_param.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: fn(mut x) x
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Lambda(
        Lambda {
            params: [
                Param {
                    mutable: Some(
                        Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 7,
                            },
                        },
                    ),
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 8,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                    annotation: None,
                },
            ],
            ret: None,
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 11,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Var(
                    "x",
                ),
            },
        },
    ),
}
