crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_no_params.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: () -> 1
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Lambda(
        Lambda {
            params: [],
            ret: None,
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
                value: Number(
                    NumberLit {
                        value: 1.0,
                        text: "1",
                    },
                ),
            },
        },
    ),
}
