crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_pattern_param.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: "((a, b)) -> a + b"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Lambda(
        Lambda {
            params: [
                Param {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 2,
                            },
                            end: Position {
                                line: 1,
                                column: 8,
                            },
                        },
                        value: Tuple {
                            first: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 3,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 4,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                            second: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 7,
                                    },
                                },
                                value: Var(
                                    "b",
                                ),
                            },
                            rest: [],
                        },
                    },
                    annotation: None,
                },
            ],
            ret: None,
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 13,
                    },
                    end: Position {
                        line: 1,
                        column: 18,
                    },
                },
                value: BinOps {
                    operands: [
                        BinOpOperand {
                            expr: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                            op: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 15,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 16,
                                    },
                                },
                                value: Add,
                            },
                        },
                    ],
                    last: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 17,
                            },
                            end: Position {
                                line: 1,
                                column: 18,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                },
            },
        },
    ),
}
