crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_return_type.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: "(x) Number -> { x * 2 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 24,
        },
    },
    value: Lambda(
        Lambda {
            params: [
                Param {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 2,
                            },
                            end: Position {
                                line: 1,
                                column: 3,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                    annotation: None,
                },
            ],
            ret: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 5,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 11,
                                        },
                                    },
                                    value: "Number",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            ),
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 15,
                    },
                    end: Position {
                        line: 1,
                        column: 24,
                    },
                },
                value: Block(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 15,
                            },
                            end: Position {
                                line: 1,
                                column: 24,
                            },
                        },
                        value: Block {
                            stmts: [],
                            tail: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 17,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 22,
                                        },
                                    },
                                    value: BinOps {
                                        operands: [
                                            BinOpOperand {
                                                expr: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 17,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 18,
                                                        },
                                                    },
                                                    value: Var(
                                                        "x",
                                                    ),
                                                },
                                                op: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 19,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 20,
                                                        },
                                                    },
                                                    value: Mul,
                                                },
                                            },
                                        ],
                                        last: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 22,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 2.0,
                                                    text: "2",
                                                },
                                            ),
                                        },
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        },
    ),
}
